# pypto_workspace_ub

./: .gitignore  .gitmodules  run_dual_node_ub_interconnect_guide.md
simulator/: .gitignore  Cargo.toml  README.md
simulator/archive/: README.md
simulator/archive/aarch64-debug-helpers/: README.md  init_test.c  init_test2.c
simulator/archive/guest-probe-legacy/: README.md
simulator/archive/qemu-device-legacy/: README.md
simulator/crates/sim-cli/: Cargo.toml
simulator/crates/sim-config/: Cargo.toml
simulator/crates/sim-core/: Cargo.toml
simulator/crates/sim-qemu/: Cargo.toml
simulator/crates/sim-report/: Cargo.toml
simulator/crates/sim-runtime/: Cargo.toml
simulator/crates/sim-services/: Cargo.toml
simulator/crates/sim-topology/: Cargo.toml
simulator/crates/sim-uapi/: Cargo.toml
simulator/crates/sim-workloads/: Cargo.toml
simulator/docs/: README.md  sim_decoder_implementation_summary.md  sim_decoder_integration_guide.md  sim_fm_dynamic_entity_injection_design.md  sim_ub_cross_node_memory_access_design.md  sim_ub_eight_node_full_mesh_design.md  sim_ub_entity_idx_gt0_executable_plan.md  sim_ub_link_final_coherence.md  sim_ub_udma_emulation_design.md  simpler_dual_node_mvp_workload_roadmap.md  simpler_integration_m1_min_workload_definition.md  simpler_integration_m2_chipbackend_mapping.md  simpler_integration_m3_copy_completion_rules.md  simpler_integration_m5_validation_matrix_template.md  simpler_integration_milestone_execution_plan.md  simpler_integration_phase_result_record_template.md  simpler_integration_plan_navigation.md  simpler_integration_work_split_and_interface_ownership.md  ub_sim_sync_boundary.md
simulator/docs/reports/: 2026-04-13-dual-node-3demo-detailed-validation.md  2026-04-13-udma-jfr-regression-stage-report.md  2026-04-14-four-node-matrix-validation.md  2026-04-15-eight-node-matrix-validation.md  rdma-demo-fix-validation-20260412.md
simulator/guest-linux/: .gitignore
simulator/guest-linux/aarch64/: README.md  build_driver.sh  build_initramfs.sh  init.c  init_manual_bind.c  insmod.c  probe.c  qemu_ub_common.sh  run_linux_probe.sh  run_manual_bind_test.sh  run_ub_dual_node_business_msg_test.sh  run_ub_dual_node_dataplane_test.sh  run_ub_dual_node_demo.sh  run_ub_dual_node_probe.sh  run_ub_dual_node_snapshot_sync_test.sh  run_ub_dual_node_ubcore_urma_e2e.sh  run_ub_dual_node_urma_acceptance_matrix.sh  run_ub_dual_node_urma_dataplane_workload_test.sh  run_ub_entity_runtime_inject_demo.sh  run_ub_mainline_probe.sh  sync_ub_kernel_artifacts_from_vm.sh  ub_chat.c  ub_obmm_demo.c  ub_obmm_pool_demo.c  ub_rdma_demo.c  ub_rpc_demo.c  ub_tcp_each_server_demo.c  uburma_cmd_user_compat.h  urma_dp.c
simulator/guest-probe/aarch64/: linqu_ub_probe.S  run_probe.sh
simulator/qemu-device/: meson.build
simulator/qemu-device/backend/: linqu_ub_rust_bridge.c
simulator/scenarios/: README.md  dual_node_block_compute.yaml  dual_node_cache_fill.yaml  dual_node_rust_llm_minimal.yaml  dual_node_shmem_mailbox.yaml  mvp_2host_single_domain.yaml
simulator/scripts/: run_simpler_dispatch.sh  simpler_dispatch_exec.sh
(+125 files in other folders)
