[package]
name = "sim-workloads"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sim-config = { path = "../sim-config" }
sim-core = { path = "../sim-core" }
sim-report = { path = "../sim-report" }
sim-runtime = { path = "../sim-runtime" }
sim-services = { path = "../sim-services" }
sim-topology = { path = "../sim-topology" }
sim-uapi = { path = "../sim-uapi" }
